# skills_pal

./: .gitignore  .npmignore  Cargo.toml  README  README.md  install.js  install.ps1  install.sh  package.json
.github/workflows/: release.yml
src/: ai.rs  analyzer.rs  browse.rs  cli.rs  config.rs  doctor.rs  downloader.rs  dtos.rs  errors.rs  git.rs  handlers.rs  hooks.rs  main.rs  models.rs  utils.rs
src/database/: mod.rs
src/server/: dashboard.rs  db.rs  main.rs  scraper.rs
src/server/assets/: index.html
static/: app.js  index.html  style.css
