[package]
name = "skills_pal"
version = "1.1.2"
edition = "2021"
description = "Un outil CLI propulsé par l'IA pour analyser la dette technique et recommander des plugins de productivité."
license = "MIT"
repository = "https://github.com/ton_pseudo/skills_pal"
keywords = ["cli", "ai", "productivity", "rust"]
categories = ["command-line-utilities", "development-tools"]
default-run = "server"

[[bin]]
name = "skills_pal"
path = "src/main.rs"

[[bin]]
name = "spal"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
zip = "2.1"
walkdir = "2.5"
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-zip-deflate", "compression-flate2", "rustls"] }
colored = "2"
indicatif = "0.17"
directories = "5"
regex = "1.10"

# Server specific dependencies
axum = "0.7"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
chrono = "0.4"

# CLI interactive
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
